--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
                 <div class="heading">
                     <p>contact</p>
                 </div>
-                <p class="p1"><i class="material-icons icons1">call</i>+123-324-5555</p>
-                <p class="p1"><i class="material-icons icons1">mail</i>info@gmail.com</p>
+                <p class="p1"><i class="material-icons icons1">call</i>+923067727061</p>
+                <p class="p1"><i class="material-icons icons1">mail</i>kashif@gmail.com</p>
             </div>
 
             <div class="box-1">
@@ -104,23 +104,23 @@
 
             <div class="box-2">
                 <h2>EDUCATION<i class="material-icons icons3">school</i></h2>
-                <p class="p3">2010-2013 <span>matric</span></p>
-                <p class="p2">Lorem ipsum dolor sit amet</p>
+                <p class="p3">2017-2018 <span>Matric</span></p>
+                <p class="p2">Govt. High School 88/WB</p>
 
-                <p class="p3">2015-2015 <span>intermediate </span></p>
-                <p class="p2">Lorem ipsum dolor sit amet</p>
+                <p class="p3">2019-2020 <span>Intermediate </span></p>
+                <p class="p2">Aspire College Vehari Campus</p>
 
-                <p class="p3">2021-continue<span>Graduation</span></p>
-                <p class="p2">Lorem ipsum dolor sit amet</p>
+                <p class="p3">2021-Continue<span>Graduation</span></p>
+                <p class="p2">Comsata University Islamabad Vehari Campus</p>
             </div>
 
             <div class="box-2">
                 <h2>Work Experince<i class="material-icons icons3">work</i></h2>
-                <p class="p3">2010-2013 <span>matric</span></p>
-                <p class="p2">Lorem ipsum dolor sit amet</p>
+                <p class="p3">3 Month <span>Internship</span></p>
+                <p class="p2">Software House In Lahore</p>
 
-                <p class="p3">2015-2015 <span>intermediate </span></p>
-                <p class="p2">Lorem ipsum dolor sit amet</p>
+                <p class="p3">6 Month <span></span></p>
+                <p class="p2">Work with Company as a Web Developer</p>
 
             </div>
         </div>
